# elem-stat-learn

./: .gitignore  pyproject.toml
elem_stat_learn/src/confidence_intervals_3_2/: main.ipynb
elem_stat_learn/src/zipcode-2-8/: __init__.py
elem_stat_learn/src/zipcode_2_8/: __main__.py  data.py  knn.py  linear_regression.py
