[tool.poetry]
name = "elem-stat-learn"
version = "0.1.0"
description = ""
authors = ["Matheus Raposo <matheus_raposo@hotmail.com>"]
readme = "README.md"
packages = [{include = "elem_stat_learn"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
